# sqlitesearch

./: .gitignore  Makefile  README.md  bench_vdbbench.py  pyproject.toml
.github/workflows/: integration.yml  publish.yml  tests.yml
benchmark/: README.md  RESULTS.md  WRITEUP.md  bench_backends.py  bench_modes.py  bench_vector_modes.py  profile_filtered_search.py  run_benchmark.py  run_full_benchmark.py  tune_hnsw_search.py  tune_recall.py  vector_bench_cohere.py
dev/: turso_emulator.py
sqlitesearch/: __init__.py  connection.py  tokenizer.py
sqlitesearch/text/: fts.py
sqlitesearch/vector/: __init__.py  _hnsw_numba.py  base.py  index.py  lsh.py  strategy_hnsw.py  strategy_ivf.py  strategy_lsh.py  strategy_lsh_int8.py
tests/: conftest.py  test_hybrid_shared_file.py  test_integration.py  test_integration_turso_docker.py  test_libsql_backend.py  test_performance.py  test_text_search.py  test_transparent_url.py  test_turso_backend.py  test_turso_bulk_ingest.py  test_vector_filtered_recall.py  test_vector_search.py  test_vector_search_hnsw.py  test_vector_search_hnsw_disk_backed.py  test_vector_search_ivf.py  test_vector_search_lsh_int8.py
