[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlitesearch"
dynamic = ["version"]
description = "A tiny, SQLite-backed search library for small, local projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sqlitesearch contributors"}
]
keywords = ["search", "sqlite", "fts", "vector-search", "lsh", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numba>=0.65.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Remote persistence: back the index with libSQL -- a local file, or an
# embedded replica that syncs to Turso Cloud (set sync_url). backend="libsql".
libsql = [
    "libsql>=0.1.0",
]

[dependency-groups]
dev = [
    "hatch",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "requests",
    "minsearch>=0.0.10",
    "pyarrow>=23.0.1",
    "s3fs>=2026.2.0",
    "libsql>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sqlitesearch"]

[tool.hatch.version]
path = "sqlitesearch/__version__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Keep the slow, Docker-requiring integration suite out of the default run.
# `uv run pytest -m integration` overrides this and selects only those tests.
addopts = "-m 'not integration'"
markers = [
    "integration: real-Docker integration tests against a libsql-server (sqld) container; run with -m integration, skipped by default and when Docker is unavailable",
]

[tool.uv]
exclude-newer = "7 days"
